[package]
name = "sensor-tlv493d"
description = "Driver for the Infineon tlv493d 3-DoF I2C hall-effect sensor"
repository = "https://github.com/ryankurte/rust-sensor-tlv493d"
keywords = [ "embedded", "no_std", "sensor", "i2c", "tlv493d" ]
authors = ["ryan <ryan@kurte.nz>"]
license = "MPL-2.0"
version = "0.1.1"
edition = "2018"

[dependencies]
embedded-hal = "0.2.7"
bitflags = "1.3.2"
